--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,7 +6,7 @@
     <title>SPACE EXPLORATION DASHBOARD</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="app">
